<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ANDROBOTIX</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start">START</string>
    <string name="FORWARD">FORWARD</string>
    <string name="BACKWARD">BACKWARD</string>
    <string name="CONNECT">CONNECT</string>
    <string name="GEAR">GEAR</string>
    <string name="SPEED">SPEED</string>
    <string name="DIRECTION">DIRECTION</string>
    <string name="FF">FORWARD -> FAST</string>
    <string name="FS">FORWARD -> SLOW</string>
    <string name="FVF">FORWARD -> VERY FAST</string>
    <string name="BS">BACKWARD -> SLOW</string>
    <string name="BF">BACKWARD -> FAST</string>
    <string name="BVF">BACKWARD -> VERY FAST</string>

</resources>
